--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,20 @@
                 <div class="icon-cabeçalho"><span><ion-icon name="bag-outline"></ion-icon></span> </div>
             </div><!--cabeçalho-link-->
         </header>
+
+        <div class="Meio"> 
+            <H1>OFERTAS EM HARDWARE</H1>
+            <h1>55% DE DESCONTO</h1>
+            <p>Tech Boost</p>
+            <button>Ver Ofertas</button>
+        </div><!--Meio-->
     </div><!--Fundo-->
+    <section> 
+        <h1> PCs Montados</h1>
+        <div class="container-escolhas">
+
+        </div><!--container-escolhas-->>
+    </section>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
