--- a/Index.html
+++ b/Index.html
@@ -27,6 +27,9 @@
                 <li>
                     <a href="#">Contato</a>
                 </li>
+                <li>
+                    <a href="#">Login/Cadastro</a>
+                </li>
                 <div class="icon-cabeçalho"><span><ion-icon name="bag-outline"></ion-icon></span> </div>
             </div><!--cabeçalho-link-->
         </header>
@@ -39,14 +42,121 @@
         </div><!--Meio-->
     </div><!--Fundo-->
     <section> 
-        <h1> PCs Montados</h1>
+        <h1>Nossas categorias</h1>
         <div class="container-escolhas">
+
             <div class="cards-escolhas">
-                
+                <a href="#"> <img src="gabinete1.jpeg"> </a>
+            </div><!--cards-escolhas-->
+
+            <div class="cards-escolhas">
+                <a href="#"> <img src="headset1.jpeg"> </a>
+            </div><!--cards-escolhas-->
+
+            <div class="cards-escolhas">
+                <a href="#"> <img src="monitor1.jpeg"> </a>
+            </div><!--cards-escolhas-->
+
+            <div class="cards-escolhas">
+                <a href="#"> <img src="fonesdeouvido1.jpeg"> </a>
+            </div><!--cards-escolhas-->
+
+            <div class="cards-escolhas">
+                <a href="#"> <img src="mouse1.jpeg"> </a>
+            </div><!--cards-escolhas-->
+
+            <div class="cards-escolhas">
+                <a href="#"> <img src="teclado1.jpeg"> </a>
             </div><!--cards-escolhas-->
 
         </div><!--container-escolhas-->
     </section>
+
+    <section class="banner-kits">
+            <div class="texto-banner-kits">
+                <h4>20% OFF<br>EM NOSSOS KITS</h4>
+                <a href="#" class="btn">Compre Agora</a>
+                <img src="kit.png">
+            </div><!--texto-banner-kits-->
+    </section><!--banner-kits-->
+
+    <section>
+        <h1>Componentes</h1>
+
+        <div class="container-componentes">
+
+            <div class="componentes"> 
+                <img src="placamãe1.jpeg">
+                <div class="icon-carrinho"><span><ion-icon name="cart-outline"></ion-icon></span></div> 
+                <button>Comprar</button> 
+            </div><!--componentes-->
+
+            <div class="componentes"> 
+                <img src="memoriaram1.jpeg">
+                <div class="icon-carrinho"><span><ion-icon name="cart-outline"></ion-icon></span></div> 
+                <button>Comprar</button>
+            </div><!--componentes-->
+            
+            <div class="componentes"> 
+                <img src="fonte1.jpeg">
+                <div class="icon-carrinho"><span><ion-icon name="cart-outline"></ion-icon></span></div> 
+                <button>Comprar</button>
+            </div><!--componentes-->
+
+            <div class="componentes"> 
+                <img src="processador.jpeg">
+                <div class="icon-carrinho"><span><ion-icon name="cart-outline"></ion-icon></span></div> 
+                <button>Comprar</button>
+            </div><!--componentes-->
+
+            <div class="componentes"> 
+                <img src="memoria1.jpeg">
+                <div class="icon-carrinho"><span><ion-icon name="cart-outline"></ion-icon></span></div> 
+                <button>Comprar</button>
+            </div><!--componentes-->
+
+        </div><!--container-componentes-->
+    </section>
+
+    <section class="contato"> 
+
+        <div class="meio-contato">
+            <h3>Empire</h3>
+            <h5> Nós envie uma mensagem</h5>
+        </div><!--meio-contato-->
+
+        <div class="meio-contato">
+            <h3>Explore</h3>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Featured</a></li>
+            <li><a href="#">New</a></li>
+            <li><a href="#">Contact</a></li>
+        </div><!--meio-contato-->
+
+        <div class="meio-contato">
+            <h3>Our Services</h3>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Free Shipping</a></li>
+            <li><a href="#">Gift Cards</a></li>
+        </div><!--meio-contato-->
+
+        <div class="meio-contato">
+            <h3>Explore</h3>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Featured</a></li>
+            <li><a href="#">New</a></li>
+            <li><a href="#">Contact</a></li>
+        </div><!--meio-contato-->
+
+        <div class="meio-contato">
+            <h3>Shopping</h3>
+            <li><a href="#">Peripherals</a></li>
+            <li><a href="#">Kits</a></li>
+            <li><a href="#">Components</a></li>
+            <li><a href="#">Sale</a></li>
+        </div><!--meio-contato-->
+    </section><!--contato-->
+
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
