css-corpo-metade

--- a/Index.html
+++ b/Index.html
@@ -27,14 +27,16 @@
                 <li>
                     <a href="#">Contato</a>
                 </li>
+                <div class="icon-cabeçalho"><span><ion-icon name="bag-outline"></ion-icon></span> </div>
+                <div class="logo-login">
                 <li>
                     <a href="#">Login/Cadastro</a>
                 </li>
-                <div class="icon-cabeçalho"><span><ion-icon name="bag-outline"></ion-icon></span> </div>
+                </div><!--logo-login-->
             </div><!--cabeçalho-link-->
         </header>
 
-        <div class="Meio"> 
+        <div class="meio"> 
             <H1>OFERTAS EM HARDWARE</H1>
             <h1>55% DE DESCONTO</h1>
             <p>Tech Boost</p>
