--- a/Registrar.html
+++ b/Registrar.html
@@ -4,35 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="StyleSheet" href="style.css"/>
+    <link rel="StyleSheet" href="registrar.css"/>
     <link href='https://unpkg.com/css.gg@2.0.0/icons/css/google.css' rel='stylesheet'>
     <link href='https://unpkg.com/css.gg@2.0.0/icons/css/facebook.css' rel='stylesheet'>
     <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
-    <title>Login</title>
+    <title>Registre-se</title>
 </head>
 <body>
     <div class="login-principal">
 
         <div class="login-esquerda">
-            <h1>Faça login<br>E entre para o nosso time</h1>
+            <h1>Faça o registro<br>E entre para o nossa equipe</h1>
             <img class="imagem-login-esquerda" src="nerd-animate.svg" alt="Animação">
         </div><!--login-esquerdo-->
 
         <div class="login-direita">
 
             <div class="card-login">
-                <h1>LOGIN</h1>
+                <h1>Registre-se</h1>
                 <div class="campo-texto">
                    <label for="usuario">Usuário</label>
                    <input type="text" name="usuario" placeholder="Usuário"> 
                  </div><!--campo-texto-->
+                 <div class="campo-texto">
+                    <label for="email">Email</label>
+                    <input type="email" name="usuario" placeholder="Email@gmail.com"> 
+                  </div><!--campo-texto-->
 
                  <div class="campo-texto">
                     <label for="senha">Senha</label>
                     <input type="password" name="senha" placeholder="Senha"> 
                 </div><!--campo-texto-->
-                    <button class="btn-login">Login</button><!--btn-login-->
-                    <button class="btn-registrar">Fazer registro</button><!--btn-login-->
+
+                <div class="campo-texto">
+                    <label for="senha">Confirmar Senha</label>
+                    <input type="password" name="Confirmar Senha" placeholder="Confirmar Senha"> 
+                </div><!--campo-texto-->
+
+                    <button class="btn-registrar">Registrar-se</button><!--btn-login-->
+                    <div class="icons">
+                        <i class="gg-google"></i>
+                        <i class="gg-facebook"></i>
+                    </div><!--icons-->
+                    <button class="btn-login" href>Fazer login</button><!--btn-login-->
                     <a href="#"><i class="gg-home"></i></a>
             </div><!--card-login-->
 
