login e registro att

--- a/Login.html
+++ b/Login.html
@@ -31,8 +31,12 @@
                     <label for="senha">Senha</label>
                     <input type="password" name="senha" placeholder="Senha"> 
                 </div><!--campo-texto-->
-                    <button class="btn-login">Login</button><!--btn-login-->
-                    <button class="btn-registrar">Fazer registro</button><!--btn-login-->
+                <form action="#">
+                    <input class="login" type="submit" value="Login" />
+                </form>
+                <form class="registrar" action="Registrar.html">
+                    <input class="registro" type="submit" value="Fazer registro" />
+                </form>
                     <a href="#"><i class="gg-home"></i></a>
             </div><!--card-login-->
 
