--- a/Registrar.html
+++ b/Registrar.html
@@ -41,12 +41,17 @@
                     <input type="password" name="Confirmar Senha" placeholder="Confirmar Senha"> 
                 </div><!--campo-texto-->
 
-                    <button class="btn-registrar">Registrar-se</button><!--btn-login-->
+                <form class="registrar" action="Registrar.html">
+                    <input class="registro" type="submit" value="Fazer registro" />
+                </form><!--form-registrar-->
+
                     <div class="icons">
                         <i class="gg-google"></i>
                         <i class="gg-facebook"></i>
                     </div><!--icons-->
-                    <button class="btn-login" href>Fazer login</button><!--btn-login-->
+                <form class="logar" action="Login.html">
+                    <input class="login" type="submit" value="Fazer login" />
+                </form>
                     <a href="#"><i class="gg-home"></i></a>
             </div><!--card-login-->
 
