--- a/Login.html
+++ b/Login.html
@@ -33,11 +33,12 @@
                 </div><!--campo-texto-->
                 <form action="#">
                     <input class="login" type="submit" value="Login" />
-                </form>
-                <form class="registrar" action="Registrar.html">
-                    <input class="registro" type="submit" value="Fazer registro" />
-                </form>
-                    <a href="#"><i class="gg-home"></i></a>
+                    <div class="registrar">
+                    <h5>Não possui conta ainda?</h5>   <a href="Registrar.html">Registre-se</a>
+                    </div><!--registrar-->
+                    <div class="icone">
+                    <a href="Catalogo.html"><i class="gg-home"></i></a>
+                </div><!--icone-->
             </div><!--card-login-->
 
         </div><!--login-direita-->
