--- a/Registrar.html
+++ b/Registrar.html
@@ -49,10 +49,11 @@
                         <i class="gg-google"></i>
                         <i class="gg-facebook"></i>
                     </div><!--icons-->
-                <form class="logar" action="Login.html">
-                    <input class="login" type="submit" value="Fazer login" />
-                </form>
-                    <a href="#"><i class="gg-home"></i></a>
+                    <div class="registrar">
+                        <h5>Já possui conta?</h5>   <a href="Login.html">Faça login</a>
+                        </div><!--registrar-->
+                        <div class="icone">
+                        <a href="Catalogo.html"><i class="gg-home"></i></a>
             </div><!--card-login-->
 
         </div><!--login-direita-->
