--- a/Login.html
+++ b/Login.html
@@ -37,7 +37,7 @@
                     <h5>Não possui conta ainda?</h5>   <a href="Registrar.html">Registre-se</a>
                     </div><!--registrar-->
                     <div class="icone">
-                    <a href="Catalogo.html"><i class="gg-home"></i></a>
+                    <a href="index.html"><i class="gg-home"></i></a>
                 </div><!--icone-->
             </div><!--card-login-->
 
