--- a/Registrar.html
+++ b/Registrar.html
@@ -53,7 +53,7 @@
                         <h5>Já possui conta?</h5>   <a href="Login.html">Faça login</a>
                         </div><!--registrar-->
                         <div class="icone">
-                        <a href="Catalogo.html"><i class="gg-home"></i></a>
+                        <a href="index.html"><i class="gg-home"></i></a>
             </div><!--card-login-->
 
         </div><!--login-direita-->
