--- a/Registrar.html
+++ b/Registrar.html
@@ -15,7 +15,7 @@
 
         <div class="login-esquerda">
             <h1>Faça o registro<br>E entre para o nossa equipe</h1>
-            <img class="imagem-login-esquerda" src="nerd-animate.svg" alt="Animação">
+            <img class="imagem-login-esquerda" src="nerd-animate (1).svg" alt="Animação">
         </div><!--login-esquerdo-->
 
         <div class="login-direita">
